force-app/main/default/objects/Order/fields/CAZ_Aprobar_reprogramacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Aprobar_reprogramacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobar reprogramación</label>
    <type>Checkbox</type>
</CustomField>