force-app/main/default/objects/Order/fields/CAZ_BigBag__c.field-meta.xml
<CustomField>
    <fullName>CAZ_BigBag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BigBag</label>
    <type>Checkbox</type>
</CustomField>