force-app/main/default/objects/Order/fields/CAZ_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Cancelacion__c</fullName>
    <label>Cancelación</label>
    <type>Date</type>
</CustomField>