force-app/main/default/objects/Order/fields/CAZ_Capacidad_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Capacidad_de_retiro__c</fullName>
    <label>Capacidad de retiro (obsoleto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>