force-app/main/default/objects/Order/fields/CAZ_Capacidad_de_retiroF__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Capacidad_de_retiroF__c</fullName>
    <formula>Account.CAZ_Capacidad_de_retiro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad de retiroF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>