force-app/main/default/objects/Order/fields/CAZ_Clave_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Clave_Distribuidor__c</fullName>
    <formula>Account.ClaveJDE__c</formula>
    <label>Clave de distribuidor</label>
    <type>Text</type>
</CustomField>