force-app/main/default/objects/Order/fields/CAZ_Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Correo_electronico__c</fullName>
    <formula>CAZ_Contacto__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>