force-app/main/default/objects/Order/fields/CAZ_Creada_en_SF__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Creada_en_SF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Orden creada en salesforce</label>
    <type>Checkbox</type>
</CustomField>