force-app/main/default/objects/Order/fields/CAZ_CreadoPor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_CreadoPor__c</fullName>
    <label>Creado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>