force-app/main/default/objects/Order/fields/CAZ_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Distribuidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribuidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>