force-app/main/default/objects/Order/fields/CAZ_Estado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Estado__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
                <default>true</default>
                <label>Borrador</label>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Reprogramación</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>