force-app/main/default/objects/Order/fields/CAZ_Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_de_creacion__c</fullName>
    <label>Fecha de creación</label>
    <type>DateTime</type>
</CustomField>