force-app/main/default/objects/Order/fields/CAZ_Fecha_reprogramacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_reprogramacion__c</fullName>
    <label>Fecha de reprogramación solicitada</label>
    <type>Date</type>
</CustomField>