force-app/main/default/objects/Order/fields/CAZ_Fecha_UModificacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_UModificacion__c</fullName>
    <label>Fecha UModificación</label>
    <type>DateTime</type>
</CustomField>