force-app/main/default/objects/Order/fields/CAZ_Listado_de_Productos__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Listado_de_Productos__c</fullName>
    <label>Listado de productos</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>