force-app/main/default/objects/Order/fields/CAZ_Motivo_reprogramacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Motivo_reprogramacion__c</fullName>
    <label>Motivo de reprogramación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>