force-app/main/default/objects/Order/fields/CAZ_Numero_JDE__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Numero_JDE__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Numero JDE</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>