force-app/main/default/objects/Order/fields/CAZ_Order_aprobada__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Order_aprobada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orden aprobada</label>
    <type>Checkbox</type>
</CustomField>