force-app/main/default/objects/Order/fields/CAZ_Planta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Planta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planta</label>
    <referenceTo>CAZ_Planta__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>