force-app/main/default/objects/Order/fields/CAZ_Producto_WS__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Producto_WS__c</fullName>
    <label>Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>