force-app/main/default/objects/Order/fields/CAZ_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>CAZ_TotalAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CAZ_TotalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>