force-app/main/default/objects/Order/fields/CAZ_VieneDeWS__c.field-meta.xml
<CustomField>
    <fullName>CAZ_VieneDeWS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAZ_VieneDeWS</label>
    <type>Checkbox</type>
</CustomField>