force-app/main/default/objects/Order/validationRules/CAZ_OrderNoAprobada_reprogramacionActiva.validationRule-meta.xml
<ValidationRule>
    <fullName>CAZ_OrderNoAprobada_reprogramacionActiva</fullName>
    <active>true</active>
    <description>No es posible solicitar una reprogramación en una Orden que no ha sido aprobada</description>
    <errorConditionFormula>AND(
   CAZ_Order_aprobada__c = false,
   ISPICKVAL(CAZ_Estado__c,&apos;Reprogramación&apos;)
)</errorConditionFormula>
    <errorMessage>No es posible solicitar una reprogramación en una Orden que no ha sido aprobada</errorMessage>
</ValidationRule>