force-app/main/default/objects/Order/validationRules/CAZ_StartDateCurrentMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>CAZ_StartDateCurrentMonth</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.CAZ_Automation_Validation_Bypass),
NOT(ISBLANK(EffectiveDate)),
OR(
MONTH(EffectiveDate) &lt;&gt; MONTH(TODAY()),
YEAR(EffectiveDate) &lt;&gt; YEAR(TODAY())
)
)</errorConditionFormula>
    <errorMessage>La fecha de inicio debe estar dentro del mes en curso.</errorMessage>
</ValidationRule>