force-app/main/default/objects/Order/validationRules/Pedido_Original_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Pedido_Original_Obligatorio</fullName>
    <active>false</active>
    <description>Si el pedido es un complemento, el campo Pedido Original es obligatorio</description>
    <errorConditionFormula>AND(
    CAZ_Creada_en_SF__c,
    ISBLANK(OriginalOrderId)
)</errorConditionFormula>
    <errorMessage>Cuando el pedido es un complemento, debes indicar el Pedido Original.</errorMessage>
</ValidationRule>