force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CAZ_Clave_Distribuidor__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CAZ_Contacto__c</columns>
    <columns>CAZ_Planta__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>notEqual</operation>
        <value>Draft</value>
    </filters>
    <label>All Orders</label>
</ListView>